Implement Employee Profile, Announcements, and Admin Security Features